fix background color && icon

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,9 @@
   "description": "An Util Extension for working with GitHub diffs",
   "version": "1.0.0",
   "manifest_version": 3,
+  "action": {
+    "default_icon": "assets/icon.png"
+  },
   "content_scripts": [
     {
       "js": ["scripts/patch.js"],
